<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#afff"
        android:onClick="back"
        android:text="@string/back_btn"
        android:textColor="#5000"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/u134" />

    <RelativeLayout style="@style/LoginLayoutStyle">

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/u136" />

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_phone"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/iv_phone"
            android:hint="@string/phone_hint"
            android:inputType="number"
            android:text="15732892375"
            android:maxLength="11" />

        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/iv_phone"
            android:layout_marginTop="10dp"
            android:src="@drawable/u138" />

        <EditText
            android:id="@+id/ed_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_pwd"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/iv_pwd"
            android:hint="@string/pwd_hint"
            android:text="123456"
            android:inputType="textPassword"
            android:maxLength="16" />
    </RelativeLayout>

    <!--<Button-->
        <!--android:id="@+id/btn_register"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginTop="50dp"-->
        <!--android:background="#09BB07"-->
        <!--android:text="@string/login_btn"-->
        <!--android:textSize="18sp" />-->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#09BB07"
        android:text="@string/login_btn"
        android:textSize="18sp" />

    <LinearLayout
        style="@style/LoginLayoutStyle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_problem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="problem"
            android:text="@string/enc_problem"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/u152" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="forgetPwd"
            android:text="@string/forget_pwd" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tell"
        android:textSize="14dp" />
</LinearLayout>